# visual-anchor-uav

./: .gitignore  LICENSE  README.md  launch_test_panel.sh
bench/: analyze.py  analyze_l15.py  analyze_l15b.py  anchor_hover_bench.py  fetch_tiles.py  fetch_tiles_google.py  fetch_tiles_highres.py  layer15_harness.py  layer15_results.csv  layer15b_harness.py  layer15b_results.csv  layer1_harness.py  layer1_results.csv  run_anchor_hover_bench.sh  run_sim_probe.sh  sim_texture_probe.py
demo/: demo1_motion_delta_xfeat_gif.py  demo2_common.py  demo2_motion_delta_aerial.py  demo2_render_from_cache.py  demo_offline_aerial.py  run_demo2.sh
docs/: SITL.md
gazebo_resources/media/materials/scripts/: donbas_rural.material  flow_ground.material
gazebo_resources/models/anchor_cam/: anchor_cam.sdf  model.config
gazebo_resources/models/anchor_cam_iris/: anchor_cam_iris.sdf  model.config
gazebo_resources/models/iris_opt_flow/: iris_opt_flow.sdf  model.config
gazebo_resources/worlds/: anchor_bench.world  iris_anchor.world  iris_anchor_task5.world
ros2/motion_delta_msgs/: CMakeLists.txt  package.xml
ros2/motion_delta_msgs/msg/: MotionDelta.msg
ros2/offboard_commander/: package.xml  setup.cfg  setup.py
ros2/offboard_commander/offboard_commander/: anchor_estimator.py  anchor_ev_shim.py  displacement_estimator.py  hover_test.py  preflight_gate.py
